force-app/main/default/objects/Decision_Event__c/Decision_Event__c.object-meta.xml
<CustomObject>
    <label>Decision Event</label>
    <pluralLabel>Decision Events</pluralLabel>
    <nameField>
        <label>Event ID</label>
        <type>AutoNumber</type>
        <displayFormat>DE-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Append-only audit trail. Each record represents one decision point in a loan lifecycle. Records MUST NOT be updated or deleted — enforced by Apex trigger. References the Policy_Rule_Version__c active at decision time.</description>
</CustomObject>