force-app/main/default/objects/Decision_Event__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>MasterDetail</type>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Decision_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>