force-app/main/default/objects/Decision_Event__c/fields/Evaluated_Facts__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_Facts__c</fullName>
    <label>Evaluated Facts</label>
    <type>Lookup</type>
    <referenceTo>Extracted_Facts__c</referenceTo>
    <relationshipLabel>Evaluated Factss</relationshipLabel>
    <relationshipName>Evaluated_Facts_Links</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>