force-app/main/default/objects/Decision_Event__c/fields/Evaluated_Rule_Count__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_Rule_Count__c</fullName>
    <label>Evaluated Rule Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>