force-app/main/default/objects/Decision_Event__c/fields/Hard_Decline_Count__c.field-meta.xml
<CustomField>
    <fullName>Hard_Decline_Count__c</fullName>
    <label>Hard Decline Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>