force-app/main/default/objects/Decision_Event__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>APPROVED</fullName><default>true</default><label>APPROVED</label></value>
            <value><fullName>APPROVED_WITH_CONDITIONS</fullName><default>false</default><label>APPROVED_WITH_CONDITIONS</label></value>
            <value><fullName>PENDING_REVIEW</fullName><default>false</default><label>PENDING_REVIEW</label></value>
            <value><fullName>HARD_DECLINED</fullName><default>false</default><label>HARD_DECLINED</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>