force-app/main/default/objects/Decision_Event__c/fields/Rule_Results_JSON__c.field-meta.xml
<CustomField>
    <fullName>Rule_Results_JSON__c</fullName>
    <label>Rule Results JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>