force-app/main/default/objects/Decision_Event__c/fields/Rule_Version__c.field-meta.xml
<CustomField>
    <fullName>Rule_Version__c</fullName>
    <label>Rule Version</label>
    <type>Lookup</type>
    <referenceTo>Policy_Rule_Version__c</referenceTo>
    <relationshipLabel>Rule Versions</relationshipLabel>
    <relationshipName>Rule_Version_Links</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>