force-app/main/default/objects/Decision_Event__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <label>Triggered By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>SYSTEM</fullName><default>true</default><label>SYSTEM</label></value>
            <value><fullName>UNDERWRITER</fullName><default>false</default><label>UNDERWRITER</label></value>
            <value><fullName>RE_EVALUATION</fullName><default>false</default><label>RE_EVALUATION</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>